--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ python:
   - "3.3"
   - "3.4"
   - "3.5"
+sudo: false
+before_install:
+  - pip install codecov
 script:
   - "python setup.py test"
-sudo: false
+after_success:
+  - codecov
