--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ python:
   - "3.3"
   - "3.4"
   - "3.5"
+install:
+  - "pip install -r requirements.txt -r requirements-test.txt"
 script:
-  - "python setup.py test"
+  - "nose2"
