--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,6 @@ include CHANGES.rst
 include LICENSE
 include README.rst
 include requirements.txt
+include requirements-test.txt
 include *.py
 recursive-include tests *.py
