--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ python:
   - "3.9"
 install:
   - "pip install -r requirements.txt -r requirements-test.txt"
+  - "pip install -e ."
 script:
   - "pytest"
