--- a/setup.cfg
+++ b/setup.cfg
@@ -36,3 +36,7 @@ install_requires =
     syslogmp==0.3
 python_requires = >=3.6
 packages = find:
+package_dir = =src
+
+[options.packages.find]
+where = src
