--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,11 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 
+[tool.black]
+line-length = 80
+skip-string-normalization = true
+target-version = ['py37']
+
 [tool.pytest.ini_options]
 addopts = "-vv"
 testpaths = ["tests"]
