Make public package all-lowercase
This is easier to type.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = syslog2IRC
+name = syslog2irc
 version = attr: syslog2irc.VERSION
 url = http://homework.nwsnet.de/releases/c474/#syslog2irc
 author = Jochen Kupperschmidt
