--- a/setup.cfg
+++ b/setup.cfg
@@ -39,3 +39,8 @@ package_dir = =src
 
 [options.packages.find]
 where = src
+
+[mypy]
+ignore_missing_imports = True
+no_implicit_optional = True
+python_version = 3.7
