Update URLs to use HTTPS where available

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = syslog2irc
 version = attr: syslog2irc.VERSION
-url = http://homework.nwsnet.de/releases/c474/#syslog2irc
+url = https://homework.nwsnet.de/releases/c474/#syslog2irc
 author = Jochen Kupperschmidt
 author_email = homework@nwsnet.de
 classifiers =
