--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ zip_safe = False
 install_requires =
     blinker==1.4
     irc==19.0.1
+    rtoml==0.6.1
     syslogmp==0.4
 python_requires = >=3.7
 packages = find:
