Replace `start-syslog2irc.py` with command entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,10 @@ python_requires = >=3.7
 packages = find:
 package_dir = =src
 
+[options.entry_points]
+console_scripts =
+    syslog2irc = syslog2irc.main:main
+
 [options.packages.find]
 where = src
 
