--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include CHANGES.rst
 include config_example.toml
+include Dockerfile
 include requirements.txt
 include requirements-test.txt
 graft tests
