Support sending custom IRC commands after connecting
Idea and essential patch provided by Jonas Alexandersson

--- a/config_example.toml
+++ b/config_example.toml
@@ -10,6 +10,9 @@ nickname = "syslog"
 realname = "syslog"
 
 [irc]
+commands = [
+  "MODE syslog +i",
+]
 channels = [
   { name = "#examplechannel1" },
   { name = "#examplechannel2", password = "zePassword" },
