Support reception of syslog messages via TCP

--- a/config_example.toml
+++ b/config_example.toml
@@ -21,5 +21,5 @@ channels = [
 [routes]
 # routing for syslog messages from the ports on which they are
 # received to the IRC channels they should be announced on
-514 = [ '#examplechannel1', '#examplechannel2' ]
-55514 = [ '#examplechannel2' ]
+"514/udp" = [ '#examplechannel1', '#examplechannel2' ]
+"55514/tcp" = [ '#examplechannel2' ]
