--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include assets/syslog2irc_logo.svg
+include assets/syslog2irc_logo_square.svg
 include CHANGES.rst
 include config_example.toml
 include Dockerfile
